Docker enhancements